# HTRMoPo

./: README.md  setup.cfg
.github/workflows/: test.yml
htrmopo/: __init__.py  cli.py  iso15924.txt  licenses.json  publish.py  record.py  repo.py  util.py  v0.metadata.schema.json  v1.metadata.schema.json
schema/v0/: metadata.schema.json
schema/v1/: metadata.schema.json  model_card.md
schema/wip/: schema.json
tests/: test_publishing.py  test_query.py
tests/resources/: invalid_party.md  llama_party.md
