[metadata]
name = party
author = Benjamin Kiessling
author_email = mittagessen@l.unchti.me
summary = HTRMoPo repository reference implementation
home_page = http://htrmopo.github.io
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
license = Apache
classifier =
        Environment :: Console
        Intended Audience :: Science/Research
	License :: OSI Approved :: Apache Software License
        Operating System :: POSIX
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13

keywords =
    atr

[files]
packages = htrmopo

[entry_points]
console_scripts =
    htrmopo = htrmopo.cli:cli

[flake8]
max_line_length = 160
exclude = tests/*

[options]
python_requires = >=3.9
install_requires =
    click
    rich
    requests
    pyyaml
    sickle
    markdown
    jsonschema
    python-dateutil
    platformdirs
